# soundcoe

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-web.yml  ci-windows.yml
cmake/: openal_config.cmake  soundcoe_config.cmake  utils.cmake
design/: class.md  design.md  flow.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md
include/: CMakeLists.txt  soundcoe.hpp
include/soundcoe/: soundcoe.hpp
include/soundcoe/core/: audio_context.hpp  error_handler.hpp  types.hpp
include/soundcoe/playback/: sound_manager.hpp  sound_player.hpp
include/soundcoe/resources/: audio_data.hpp  resource_manager.hpp  sound_buffer.hpp  sound_source.hpp
include/soundcoe/utils/: math.hpp
src/: CMakeLists.txt  soundcoe.cpp
src/core/: audio_context.cpp  error_handler.cpp
src/playback/: sound_manager.cpp
src/resources/: audio_data.cpp  resource_manager.cpp  sound_buffer.cpp  sound_source.cpp
src/utils/: math.cpp
tests/: CMakeLists.txt  core_tests.cpp  main.cpp  math_tests.cpp  playback_tests.cpp  resources_tests.cpp
tests/utils/: test_audio_files.hpp
